--- a/extraction/Makefile
+++ b/extraction/Makefile
@@ -26,11 +26,11 @@ CMX=Bool.cmx Ascii.cmx Datatypes.cmx Nat.cmx String0.cmx \
     ssrbool.cmx ssrnat.cmx seq.cmx eqtype.cmx fintype.cmx \
 	tuple.cmx bitsrep.cmx \
 	bitsops.cmx monad.cmx reader.cmx writer.cmx \
-    reg.cmx instr.cmx program.cmx ../src/printinstr.cmx
+    reg.cmx instr.cmx program.cmx ../src/printasm.cmx
 
 CMO=$(CMX:.cmx=.cmo)
 
-PLUGIN=../src/printinstr.cmxs
+PLUGIN=../src/printasm.cmxs
 
 $(PLUGIN): $(CMX) $(CMO)
 	$(OCAMLOPT) -pack -o amd64.cmx $(LIBS) $(CMX)
